--- a/demos/checkbox.html
+++ b/demos/checkbox.html
@@ -18,6 +18,7 @@ limitations under the License.
 <html>
 <head>
   <title>checkbox demo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
   <script type="module" src="../node_modules/@material/mwc-checkbox/mwc-checkbox.js"></script>
   <script type="module" src="../node_modules/@material/mwc-icon/mwc-icon.js"></script>
@@ -25,7 +26,7 @@ limitations under the License.
 </head>
 <body class="unresolved">
   <header>
-    <a href="index.html"><mwc-icon></mwc-icon>
+    <a href="index.html"><mwc-icon>arrow_back</mwc-icon>
     <span>Checkbox</span></a>
   </header>
 
