--- a/demos/chips.html
+++ b/demos/chips.html
@@ -18,6 +18,7 @@ limitations under the License.
 <html>
 <head>
   <title>chips demo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script  src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
   <script type="module" src="../node_modules/@material/mwc-chips/mwc-chip.js"></script>
   <script type="module" src="../node_modules/@material/mwc-chips/mwc-chip-set.js"></script>
@@ -32,7 +33,7 @@ limitations under the License.
 </head>
 <body class="unresolved">
   <header>
-    <a href="index.html"><mwc-icon></mwc-icon>
+    <a href="index.html"><mwc-icon>arrow_back</mwc-icon>
     <span>Chips</span></a>
   </header>
 
