--- a/demos/formfield.html
+++ b/demos/formfield.html
@@ -18,6 +18,7 @@ limitations under the License.
 <html>
 <head>
   <title>formfield demo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script  src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
   <script type="module" src="../node_modules/@material/mwc-formfield/mwc-formfield.js"></script>
   <script type="module" src="../node_modules/@material/mwc-checkbox/mwc-checkbox.js"></script>
@@ -29,7 +30,7 @@ limitations under the License.
 </head>
 <body class="unresolved">
   <header>
-    <a href="index.html"><mwc-icon></mwc-icon>
+    <a href="index.html"><mwc-icon>arrow_back</mwc-icon>
     <span>Formfield</span></a>
   </header>
 
