--- a/demos/icon-toggle.html
+++ b/demos/icon-toggle.html
@@ -18,6 +18,7 @@ limitations under the License.
 <html>
 <head>
   <title>icon-toggle demo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script  src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
   <script type="module" src="../node_modules/@material/mwc-icon-toggle/mwc-icon-toggle.js"></script>
   <script type="module" src="../node_modules/@material/mwc-icon/mwc-icon.js"></script>
@@ -31,7 +32,7 @@ limitations under the License.
 </head>
 <body class="unresolved">
   <header>
-    <a href="index.html"><mwc-icon></mwc-icon>
+    <a href="index.html"><mwc-icon>arrow_back</mwc-icon>
     <span>Icon Toggle</span></a>
   </header>
 
