--- a/demos/index.html
+++ b/demos/index.html
@@ -18,6 +18,7 @@ limitations under the License.
 <html>
 <head>
   <title>Material Web Components Catalog</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="demo-component.css">
 </head>
 <body>
