--- a/demos/linear-progress.html
+++ b/demos/linear-progress.html
@@ -18,6 +18,7 @@ limitations under the License.
 <html>
 <head>
   <title>linear-progress demo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script  src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
   <script type="module" src="../node_modules/@material/mwc-linear-progress/mwc-linear-progress.js"></script>
   <script type="module" src="../node_modules/@material/mwc-button/mwc-button.js"></script>
@@ -40,7 +41,7 @@ limitations under the License.
 </head>
 <body class="unresolved">
   <header>
-    <a href="index.html"><mwc-icon></mwc-icon>
+    <a href="index.html"><mwc-icon>arrow_back</mwc-icon>
     <span>Linear Progress</span></a>
   </header>
 
