--- a/demos/tabs.html
+++ b/demos/tabs.html
@@ -18,6 +18,7 @@ limitations under the License.
 <html>
 <head>
   <title>tabs demo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script  src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
   <script type="module" src="../node_modules/@material/mwc-tabs/mwc-tab-bar-scroller.js"></script>
   <script type="module" src="../node_modules/@material/mwc-tabs/mwc-tab-bar.js"></script>
@@ -27,7 +28,7 @@ limitations under the License.
 </head>
 <body class="unresolved">
   <header>
-    <a href="index.html"><mwc-icon></mwc-icon>
+    <a href="index.html"><mwc-icon>arrow_back</mwc-icon>
     <span>Tabs</span></a>
   </header>
 
