Make demos easy to publish
- Minor changes to demo pages for rollup compat

--- a/demos/chips.html
+++ b/demos/chips.html
@@ -63,7 +63,7 @@ limitations under the License.
 
   </main>
 
-  <script type="module">
+  <script>
     addEventListener('load', () => document.body.classList.remove('unresolved'));
   </script>
 </body>
