--- a/demos/fab.html
+++ b/demos/fab.html
@@ -20,8 +20,8 @@ limitations under the License.
   <title>fab demo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
-  <script type="module" src="../node_modules/@material/mwc-icon/mwc-icon.js"></script>
   <script type="module" src="../node_modules/@material/mwc-fab/mwc-fab.js"></script>
+  <script type="module" src="../node_modules/@material/mwc-icon/mwc-icon.js"></script>
   <link rel="stylesheet" href="demo-component.css">
   <style>
     .light {
@@ -68,7 +68,7 @@ limitations under the License.
 
   </main>
 
-  <script type="module">
+  <script>
     addEventListener('load', () => document.body.classList.remove('unresolved'));
   </script>
 </body>
