--- a/demos/formfield.html
+++ b/demos/formfield.html
@@ -72,7 +72,7 @@ limitations under the License.
     </mwc-formfield>
   </main>
 
-  <script type="module">
+  <script>
     addEventListener('load', () => document.body.classList.remove('unresolved'));
   </script>
 </body>
