--- a/demos/linear-progress.html
+++ b/demos/linear-progress.html
@@ -58,7 +58,7 @@ limitations under the License.
     <mwc-linear-progress determinate reverse progress="0.2" buffer="0.6"></mwc-linear-progress>
   </main>
 
-  <script type="module">
+  <script>
     toggle.onclick = (e) => {
       progress1.closed = !progress1.closed;
     }
