--- a/demos/menu.html
+++ b/demos/menu.html
@@ -65,7 +65,7 @@ limitations under the License.
     </div>
     <div class="demo-log" id="log"></div>
   </main>
-  <script type="module">
+  <script>
     button.addEventListener('click', (e) => {
       menu.setAnchorCorner(menu.Corner.BOTTOM_START);
       menu.open = !menu.open;
