--- a/demos/card.html
+++ b/demos/card.html
@@ -110,7 +110,7 @@ limitations under the License.
   <div class="presentCard">
     <demo-card></demo-card>
   </div>
-  <script type="module">
+  <script>
     addEventListener('load', () => document.body.classList.remove('unresolved'));
   </script>
 </body>
