--- a/demos/checkbox.html
+++ b/demos/checkbox.html
@@ -42,7 +42,7 @@ limitations under the License.
     </div>
   </main>
 
-  <script type="module">
+  <script>
     addEventListener('load', () => document.body.classList.remove('unresolved'));
   </script>
 </body>
