--- a/demos/index.html
+++ b/demos/index.html
@@ -24,9 +24,9 @@ limitations under the License.
 <body>
   <demo-view></demo-view>
 
-  <script  src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
+  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
   <script type="module">
-    import {LitElement, html} from '@polymer/lit-element';
+    import {LitElement, html} from '@polymer/lit-element/lit-element.js';
     import {style as listStyle} from '@material/mwc-list/mwc-list-item-css.js';
 
     class DemoView extends LitElement {
