fab: Add `label` property; tests for `aria-label`.

--- a/demos/fab.html
+++ b/demos/fab.html
@@ -59,9 +59,9 @@ limitations under the License.
   <main>
 
     <div class="demo-fab-group demo-group-spaced">
-      <mwc-fab icon="explore"></mwc-fab>
-      <mwc-fab class="light" icon="code"></mwc-fab>
-      <mwc-fab icon="feedback"></mwc-fab>
+      <mwc-fab icon="explore" label="Explore the world. (This is an example label.)"></mwc-fab>
+      <mwc-fab class="light" icon="code" label="Show me the code. (This is an example label.)"></mwc-fab>
+      <mwc-fab icon="feedback" label="Provide feedback. (This is an example label.)"></mwc-fab>
       <mwc-fab class="pink" icon="gavel" mini></mwc-fab>
       <mwc-fab icon="fingerprint" disabled></mwc-fab>
     </div>
