--- a/demos/switch.html
+++ b/demos/switch.html
@@ -21,7 +21,7 @@ limitations under the License.
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script  src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
   <script type="module" src="../node_modules/@material/mwc-switch/mwc-switch.js"></script>
-  <script type="module" src="../node_modules/@material/mwc-icon/mwc-icon.js"></script>
+  <!-- <script type="module" src="../node_modules/@material/mwc-icon/mwc-icon.js"></script> -->
   <link rel="stylesheet" href="demo-component.css">
 </head>
 <body class="unresolved">
