update to lit-element#dev (currently 0.6.0-dev.5); make tests passing and demos/index.html working

--- a/demos/card.html
+++ b/demos/card.html
@@ -55,7 +55,7 @@ limitations under the License.
     import '../node_modules/@material/mwc-ripple/mwc-ripple.js';
 
     class DemoCard extends LitElement {
-      _render() {
+      render() {
         return html`
           ${cardStyle}${typographyStyle}
           <style>
