--- a/demos/index.html
+++ b/demos/index.html
@@ -30,7 +30,7 @@ limitations under the License.
     import {style as listStyle} from '@material/mwc-list/mwc-list-item-css.js';
 
     class DemoView extends LitElement {
-      _render() {
+      render() {
         return html`
           ${listStyle}
           <style>
