Ripple in TypeScript
Updated to render using a Ripple directive.

--- a/demos/ripple.html
+++ b/demos/ripple.html
@@ -63,7 +63,7 @@ limitations under the License.
       <div class="demo-box">Primary<mwc-ripple primary></mwc-ripple></div>
       <div class="demo-box">Accent<mwc-ripple accent></mwc-ripple></div>
       <div class="demo-box"><input placeholder="Say something..."><mwc-ripple></mwc-ripple></div>
-      <div class="demo-unbounded">Unbounded<mwc-ripple unbounded></mwc-ripple></div>
+      <div class="demo-box">Unbounded<mwc-ripple unbounded></mwc-ripple></div>
     </div>
   </main>
 
