first start to radio

--- a/demos/radio.html
+++ b/demos/radio.html
@@ -32,7 +32,7 @@ limitations under the License.
 
   <main>
     <mwc-radio id="s.1" name="s"></mwc-radio>
-    <mwc-radio id="s.2" name="s" checked></mwc-radio>
+    <mwc-radio id="s.2" name="s"></mwc-radio>
     <mwc-radio id="s.3" name="s"></mwc-radio>
     <br>
     <mwc-radio id="b.1" name="b"></mwc-radio>
