--- a/demos/tabs.html
+++ b/demos/tabs.html
@@ -40,7 +40,7 @@ limitations under the License.
     </mwc-tab-bar>
 
     <h3>With Icons</h3>
-    <mwc-tab-bar activeTabIndex="1">
+    <mwc-tab-bar activeIndex="2">
       <mwc-tab label="one" icon="accessibility"></mwc-tab>
       <mwc-tab label="two" icon="exit_to_app"></mwc-tab>
       <mwc-tab label="three" icon="camera"></mwc-tab>
