--- a/demos/index.html
+++ b/demos/index.html
@@ -120,6 +120,13 @@ limitations under the License.
                   <span class="mdc-list-item__secondary-text">Interactive presentation of important information</span>
                 </span>
               </a> -->
+              <a role="listitem" class="mdc-list-item" href="drawer.html">
+                <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/ic_component_24px.svg"></span>
+                <span class="mdc-list-item__text">
+                  Drawer
+                  <span class="mdc-list-item__secondary-text">Multi-selection controls</span>
+                </span>
+              </a>
               <a role="listitem" class="mdc-list-item" href="formfield.html">
                 <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/ic_text_field_24px.svg"></span>
                 <span class="mdc-list-item__text">
@@ -197,17 +204,24 @@ limitations under the License.
                   <span class="mdc-list-item__secondary-text">On off switches</span>
                 </span>
               </a>
-              <!-- <a role="listitem" class="mdc-list-item" href="tabs.html">
+              <a role="listitem" class="mdc-list-item" href="tabs.html">
                 <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/ic_tabs_24px.svg"></span>
                 <span class="mdc-list-item__text">
                   Tabs
-                  <span class="mdc-list-item__secondary-text">Tabs with support for icon and text labels</spandiv>
+                  <span class="mdc-list-item__secondary-text">Tabs with support for icon and text labels</span>
                 </span>
-              </a> -->
+              </a>
               <a role="listitem" class="mdc-list-item" href="textfield.html">
                 <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/ic_text_field_24px.svg"></span>
                 <span class="mdc-list-item__text">
                   Text field
+                  <span class="mdc-list-item__secondary-text">Single and multiline text fields</span>
+                </span>
+              </a>
+              <a role="listitem" class="mdc-list-item" href="top-app-bar.html">
+                <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/ic_component_24px.svg"></span>
+                <span class="mdc-list-item__text">
+                  Top App Bar
                   <span class="mdc-list-item__secondary-text">Single and multiline text fields</span>
                 </span>
               </a>
