Rewrite formfield as typescript
- Implement `ripple` getter on formable components for activation of
ripple directive
- Improve watcher output

--- a/demos/formfield.html
+++ b/demos/formfield.html
@@ -66,10 +66,10 @@ limitations under the License.
       <mwc-radio id="three" name="a"></mwc-radio>
     </mwc-formfield>
 
-    <h4>Slider</h4>
+    <!-- <h4>Slider</h4>
     <mwc-formfield label="This is a slider.">
       <mwc-slider></mwc-slider>
-    </mwc-formfield>
+    </mwc-formfield> -->
   </main>
 
   <script>
