--- a/demos/index.html
+++ b/demos/index.html
@@ -120,13 +120,13 @@ limitations under the License.
                   <span class="mdc-list-item__secondary-text">Interactive presentation of important information</span>
                 </span>
               </a> -->
-              <a role="listitem" class="mdc-list-item" href="drawer.html">
+              <!-- <a role="listitem" class="mdc-list-item" href="drawer.html">
                 <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/ic_component_24px.svg"></span>
                 <span class="mdc-list-item__text">
                   Drawer
                   <span class="mdc-list-item__secondary-text">Multi-selection controls</span>
                 </span>
-              </a>
+              </a> -->
               <a role="listitem" class="mdc-list-item" href="formfield.html">
                 <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/ic_text_field_24px.svg"></span>
                 <span class="mdc-list-item__text">
@@ -148,13 +148,13 @@ limitations under the License.
                   <span class="mdc-list-item__secondary-text">Toggling icon states</span>
                 </span>
               </a> -->
-              <a role="listitem" class="mdc-list-item" href="linear-progress.html">
+              <!-- <a role="listitem" class="mdc-list-item" href="linear-progress.html">
                 <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/ic_progress_activity.svg"></span>
                 <span class="mdc-list-item__text">
                   Linear Progress
                   <span class="mdc-list-item__secondary-text">Fills from 0% to 100%, represented by bars</span>
                 </span>
-              </a>
+              </a> -->
               <!-- <a role="listitem" class="mdc-list-item" href="menu.html">
                 <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/ic_menu_24px.svg"></span>
                 <span class="mdc-list-item__text">
@@ -204,13 +204,13 @@ limitations under the License.
                   <span class="mdc-list-item__secondary-text">On off switches</span>
                 </span>
               </a>
-              <a role="listitem" class="mdc-list-item" href="tabs.html">
+              <!-- <a role="listitem" class="mdc-list-item" href="tabs.html">
                 <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/ic_tabs_24px.svg"></span>
                 <span class="mdc-list-item__text">
                   Tabs
                   <span class="mdc-list-item__secondary-text">Tabs with support for icon and text labels</span>
                 </span>
-              </a>
+              </a> -->
               <!-- <a role="listitem" class="mdc-list-item" href="textfield.html">
                 <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/ic_text_field_24px.svg"></span>
                 <span class="mdc-list-item__text">
@@ -218,13 +218,13 @@ limitations under the License.
                   <span class="mdc-list-item__secondary-text">Single and multiline text fields</span>
                 </span>
               </a> -->
-              <a role="listitem" class="mdc-list-item" href="top-app-bar.html">
+              <!-- <a role="listitem" class="mdc-list-item" href="top-app-bar.html">
                 <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/ic_component_24px.svg"></span>
                 <span class="mdc-list-item__text">
                   Top App Bar
                   <span class="mdc-list-item__secondary-text">Single and multiline text fields</span>
                 </span>
-              </a>
+              </a> -->
             </div>
           </div>
         `;
