Make demo publishing more consistant

--- a/demos/formfield.html
+++ b/demos/formfield.html
@@ -24,7 +24,7 @@ limitations under the License.
   <script type="module" src="../node_modules/@material/mwc-checkbox/mwc-checkbox.js"></script>
   <script type="module" src="../node_modules/@material/mwc-radio/mwc-radio.js"></script>
   <script type="module" src="../node_modules/@material/mwc-switch/mwc-switch.js"></script>
-  <script type="module" src="../node_modules/@material/mwc-slider/mwc-slider.js"></script>
+  <!-- <script type="module" src="../node_modules/@material/mwc-slider/mwc-slider.js"></script> -->
   <script type="module" src="../node_modules/@material/mwc-icon/mwc-icon.js"></script>
   <link rel="stylesheet" href="demo-component.css">
 </head>
