--- a/demos/index.html
+++ b/demos/index.html
@@ -27,7 +27,7 @@ limitations under the License.
   <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
   <script type="module">
     import {LitElement, html} from '@polymer/lit-element/lit-element.js';
-    import {style as listStyle} from '@material/mwc-list/mwc-list-item-css.js';
+    import {style as listStyle} from './style/mwc-list-item-css.js';
 
     class DemoView extends LitElement {
       render() {
@@ -79,7 +79,7 @@ limitations under the License.
           </style>
           <header>
             <span class="demo-catalog-logo">
-              <img  src="https://material-components-web.appspot.com/images/ic_component_24px_white.svg">
+              <img src="https://material-components-web.appspot.com/images/ic_component_24px_white.svg">
             </span>
             <span class="demo-heading">Material Web Components Catalog</span>
           </header>
