Fix typo in chips demo
replace leadingIcon with trailingIcon in trailing icon demo

--- a/demos/chips.html
+++ b/demos/chips.html
@@ -42,7 +42,7 @@ limitations under the License.
   <mwc-chip-set>
     <mwc-chip label="Chip"></mwc-chip>
     <mwc-chip label="Leading Icon" leadingIcon="fingerprint"></mwc-chip>
-    <mwc-chip label="Trailing Icon" leadingIcon="language"></mwc-chip>
+    <mwc-chip label="Trailing Icon" trailingIcon="language"></mwc-chip>
   </mwc-chip-set>
 
   <h3>choice</h3>
