--- a/demos/button.html
+++ b/demos/button.html
@@ -76,7 +76,7 @@ limitations under the License.
     </div>
 
     <script type="module">
-      import {html} from '@polymer/lit-element/lit-element.js';
+      import {html} from 'lit-element/lit-element.js';
       import {Button} from '@material/mwc-button/mwc-button.js';
       class CustomButton extends Button {
         _renderStyle(){
