--- a/demos/card.html
+++ b/demos/card.html
@@ -48,7 +48,7 @@ limitations under the License.
   <script type="module">
     import {style as cardStyle} from '../node_modules/@material/mwc-card/mwc-card-css.js';
     import {style as typographyStyle} from '../node_modules/@material/mwc-typography/mwc-typography-css.js';
-    import {LitElement, html} from '../node_modules/@polymer/lit-element/lit-element.js';
+    import {LitElement, html} from '../node_modules/lit-element/lit-element.js';
     import '../node_modules/@material/mwc-button/mwc-button.js';
     import '../node_modules/@material/mwc-icon/mwc-icon.js';
     import '../node_modules/@material/mwc-icon-toggle/mwc-icon-toggle.js';
