--- a/demos/card.html
+++ b/demos/card.html
@@ -55,10 +55,11 @@ limitations under the License.
     import '../node_modules/@material/mwc-ripple/mwc-ripple.js';
 
     class DemoCard extends LitElement {
-      render() {
-        return html`
-          ${cardStyle}${typographyStyle}
-          <style>
+      static get styles() {
+        return [
+          cardStyle,
+          typographyStyle,
+          css`
             :host {
               display: inline-block;
             }
@@ -78,7 +79,12 @@ limitations under the License.
             .subtext {
               color: rgba(0, 0, 0, 0.54);
             }
-          </style>
+          `,
+        ];
+      }
+
+      render() {
+        return html`
           <div class="mdc-card">
             <div class="mdc-card__primary-action">
               <div class="mdc-card__media mdc-card__media--16-9 my-media"></div>
