--- a/demos/drawer/dismissible.html
+++ b/demos/drawer/dismissible.html
@@ -30,7 +30,7 @@ limitations under the License.
   <mwc-drawer hasHeader type="dismissible">
     <span slot="title">Drawer Title</span>
     <span slot="subtitle">subtitle</span>
-    <div class="drawerContent">
+    <div class="drawer-content">
       <p>Drawer content</p>
       <mwc-icon-button icon="gesture"></mwc-icon-button>
       <mwc-icon-button icon="gavel"></mwc-icon-button>
