--- a/demos/drawer/standard.html
+++ b/demos/drawer/standard.html
@@ -29,7 +29,7 @@ limitations under the License.
     <mwc-drawer hasHeader>
       <span slot="title">Drawer Title</span>
       <span slot="subtitle">subtitle</span>
-      <div class="drawerContent">
+      <div class="drawer-content">
         <p>Drawer content!</p>
         <p>With separate drawer scrolling.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
