--- a/demos/index.html
+++ b/demos/index.html
@@ -146,13 +146,13 @@ limitations under the License.
                   <span class="mdc-list-item__secondary-text">Material design icons</span>
                 </span>
               </a>
-              <!-- <a role="listitem" class="mdc-list-item" href="icon-toggle.html">
+              <a role="listitem" class="mdc-list-item" href="icon-button.html">
                 <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/ic_component_24px.svg"></span>
                 <span class="mdc-list-item__text">
-                  Icon Toggle
+                  Icon Button
                   <span class="mdc-list-item__secondary-text">Toggling icon states</span>
                 </span>
-              </a> -->
+              </a>
               <a role="listitem" class="mdc-list-item" href="linear-progress.html">
                 <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/ic_progress_activity.svg"></span>
                 <span class="mdc-list-item__text">
