--- a/demos/index.html
+++ b/demos/index.html
@@ -111,20 +111,6 @@ limitations under the License.
                   <span class="mdc-list-item__secondary-text">Multi-selection controls</span>
                 </span>
               </a>
-              <!-- <a role="listitem" class="mdc-list-item" href="chips.html">
-                <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/ic_chips_24dp.svg"></span>
-                <span class="mdc-list-item__text">
-                  Chips
-                  <span class="mdc-list-item__secondary-text">Chips for actions, selection, and input</span>
-                </span>
-              </a> -->
-              <!-- <a role="listitem" class="mdc-list-item" href="dialog.html">
-                <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/ic_dialog_24px.svg"></span>
-                <span class="mdc-list-item__text">
-                  Dialog
-                  <span class="mdc-list-item__secondary-text">Interactive presentation of important information</span>
-                </span>
-              </a> -->
               <a role="listitem" class="mdc-list-item" href="drawer.html">
                 <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/ic_component_24px.svg"></span>
                 <span class="mdc-list-item__text">
@@ -160,13 +146,6 @@ limitations under the License.
                   <span class="mdc-list-item__secondary-text">Fills from 0% to 100%, represented by bars</span>
                 </span>
               </a>
-              <!-- <a role="listitem" class="mdc-list-item" href="menu.html">
-                <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/ic_menu_24px.svg"></span>
-                <span class="mdc-list-item__text">
-                  Menu
-                  <span class="mdc-list-item__secondary-text">Pop over menus</span>
-                </span>
-              </a> -->
               <a role="listitem" class="mdc-list-item" href="radio.html">
                 <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/ic_radio_button_24px.svg"></span>
                 <span class="mdc-list-item__text">
@@ -181,27 +160,20 @@ limitations under the License.
                   <span class="mdc-list-item__secondary-text">Touch ripple</span>
                 </span>
               </a>
-              <!-- <a role="listitem" class="mdc-list-item" href="select.html">
-                <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/ic_menu_24px.svg"></span>
-                <span class="mdc-list-item__text">
-                  Select
-                  <span class="mdc-list-item__secondary-text">Pop over selection menus</span>
-                </span>
-              </a> -->
-              <!-- <a role="listitem" class="mdc-list-item" href="slider.html">
+              <a role="listitem" class="mdc-list-item" href="slider.html">
                 <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/slider.svg"></span>
                 <span class="mdc-list-item__text">
                   Slider
                   <span class="mdc-list-item__secondary-text">Range controls</span>
                 </span>
-              </a> -->
-              <!-- <a role="listitem" class="mdc-list-item" href="snackbar.html">
+              </a>
+              <a role="listitem" class="mdc-list-item" href="snackbar.html">
                 <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/ic_toast_24px.svg"></span>
                 <span class="mdc-list-item__text">
                   Snackbar
                   <span class="mdc-list-item__secondary-text">Transient messages</span>
                 </span>
-              </a> -->
+              </a>
               <a role="listitem" class="mdc-list-item" href="switch.html">
                 <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/ic_switch_24px.svg"></span>
                 <span class="mdc-list-item__text">
@@ -216,13 +188,6 @@ limitations under the License.
                   <span class="mdc-list-item__secondary-text">Tabs with support for icon and text labels</span>
                 </span>
               </a>
-              <!-- <a role="listitem" class="mdc-list-item" href="textfield.html">
-                <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/ic_text_field_24px.svg"></span>
-                <span class="mdc-list-item__text">
-                  Text field
-                  <span class="mdc-list-item__secondary-text">Single and multiline text fields</span>
-                </span>
-              </a> -->
               <a role="listitem" class="mdc-list-item" href="top-app-bar.html">
                 <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/ic_component_24px.svg"></span>
                 <span class="mdc-list-item__text">
