Add font import to demo.
We no longer auto-import fonts.

--- a/demos/index.html
+++ b/demos/index.html
@@ -20,6 +20,7 @@ limitations under the License.
   <title>Material Web Components Catalog</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="demo-component.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Material+Icons">
 </head>
 <body>
   <demo-view></demo-view>
